<resources>
    <string name="app_name">MallZellij DataShow</string>
    <string name="title">Welcome</string>
    <string name="login_tab">Login</string>
    <string name="email_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_loading">Logging in…</string>
    <string name="error_required">Please fill in all fields</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_network">Connection error</string>
    <string name="success_login">Welcome</string>
    <string name="desc_logo">App logo</string>
    <string name="desc_login_form">Login form</string>
    <string name="desc_email_input">Login input</string>
    <string name="desc_password_input">Password input</string>
    <string name="desc_login_button">Submit login</string>
    <string name="desc_loading">Loading, please wait</string>

    <string name="articles_title">Articles</string>
    <string name="search_hint">Search articles…</string>
    <string name="view_stock">View Stock</string>
    <string name="article_name_header">Article Name</string>
    <string name="action_stock">Stock</string>
    <string name="stock_title">Stock Details</string>
    <string name="site_name_header">Site</string>
    <string name="quantity_header">Quantity</string>
    <string name="loading_articles">Loading articles…</string>
    <string name="loading_stocks">Loading stock details…</string>
    <string name="no_articles">No articles found</string>
    <string name="no_stock">No stock information available</string>
    <string name="logout">Logout</string>
    <string name="desc_search_input">Search articles</string>
    <string name="desc_article_list">List of articles</string>
    <string name="desc_stock_list">Stock details list</string>
    <string name="desc_view_stock_button">View stock for this article</string>
    <string name="scan">Scan</string>
    <string name="error_article_not_found">Article not found</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>

    <string name="inventory_title">Inventory</string>
    <string name="inventory_article_hint">Article</string>
    <string name="inventory_carton_hint">Carton</string>
    <string name="inventory_pallet_hint">Pallet</string>
    <string name="inventory_metre_carre_hint">Metre Carré</string>
    <string name="inventory_btn">Submit</string>
    <string name="inventory_loading">Submitting…</string>
    <string name="desc_inventory_form">Inventory form</string>
    <string name="desc_inventory_article">Article input</string>
    <string name="desc_inventory_carton">Carton input</string>
    <string name="desc_inventory_pallet">Pallet input</string>
    <string name="desc_inventory_metre_carre">Metre Carré input</string>
    <string name="desc_inventory_button">Submit inventory</string>
    <string name="inventory">Inventory</string>

    <string-array name="equipe_options">
        <item>Équipe 1</item>
        <item>Équipe 2</item>
        <item>Équipe 3</item>
    </string-array>

    <string-array name="depot_options">
        <item>Dépôt 1</item>
        <item>Dépôt 2</item>
        <item>Dépôt 3</item>
    </string-array>

    <string-array name="zone_options">
        <item>Zone A</item>
        <item>Zone B</item>
        <item>Zone C</item>
    </string-array>

    <string name="inventory_equipe_hint">Équipe</string>
    <string name="desc_inventory_equipe">Équipe dropdown</string>

    <string name="inventory_depot">Depot</string>
    <string name="inventory_depot_hint">Dépôt</string>
    <string name="desc_inventory_depot">Dépôt dropdown</string>

    <string name="inventory_categories">Categories</string>
    <string name="inventory_zone_hint">Zone</string>
    <string name="desc_inventory_zone">Zone dropdown</string>

    <string name="inventory_submitted">Inventory submitted</string>
    <string name="inventory_error">Failed to submit inventory</string>

    <string name="inventory_categoris">Categoris</string>

    <string name="a_louer">À louer</string>

    <string name="devi_title">Devi</string>
    <string name="devi_site_hint">Site</string>
    <string name="devi_client_hint">Client</string>
    <string name="devi_article_hint">Article</string>
    <string name="devi_quantity_hint">Quantity</string>
    <string name="devi_coefficient_label">Coefficient</string>
    <string name="devi_cartons_label">Cartons</string>
    <string name="devi_generate_btn">Generate</string>
    <string name="devi_review_title">Review Devi</string>
    <string name="devi_edit_btn">Edit</string>
    <string name="devi_confirm_btn">Confirm</string>
    <string name="devi_csv_btn">Download CSV</string>
    <string name="devi_add_article_btn">Add Article</string>
    <string name="devi_remove_btn">Remove</string>
    <string name="devi_no_articles">No articles added yet</string>

    <string name="add_to_quote">Devis</string>
    <string name="desc_favorite">Toggle favorite</string>
    <string name="in_stock">IN STOCK</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="physical_stock_label">Physical</string>
    <string name="available_stock_label">Available</string>
    <string name="added_to_fav">Added to favorites</string>
    <string name="removed_from_fav">Removed from favorites</string>
</resources>